--- a/app/views/issues/show.html.erb
+++ b/app/views/issues/show.html.erb
@@ -18,32 +18,52 @@
 <table class="attributes">
 <tr>
     <th class="status"><%=l(:field_status)%>:</th><td class="status"><%= h(@issue.status.name) %></td>
-    <th class="start-date"><%=l(:field_start_date)%>:</th><td class="start-date"><%= format_date(@issue.start_date) %></td>
+    <th class="status"><%=l(:field_ordinamento)%>:</th><td class="status"><%= h(@issue.ordinamento) %></td>
 </tr>
 <tr>
     <th class="priority"><%=l(:field_priority)%>:</th><td class="priority"><%= h(@issue.priority.name) %></td>
-    <th class="due-date"><%=l(:field_due_date)%>:</th><td class="due-date"><%= format_date(@issue.due_date) %></td>
+    <th class="start-date"><%=l(:field_start_date)%>:</th><td class="start-date"><%= format_date(@issue.start_date) %></td>
 </tr>
 <tr>
     <th class="assigned-to"><%=l(:field_assigned_to)%>:</th><td class="assigned-to"><%= avatar(@issue.assigned_to, :size => "14") %><%= @issue.assigned_to ? link_to_user(@issue.assigned_to) : "-" %></td>
-    <th class="progress"><%=l(:field_done_ratio)%>:</th><td class="progress"><%= progress_bar @issue.done_ratio, :width => '80px', :legend => "#{@issue.done_ratio}%" %></td>
+    <th class="due-date"><%=l(:field_due_date)%>:</th><td class="due-date"><%= format_date(@issue.due_date) %></td>
 </tr>
 <tr>
     <th class="category"><%=l(:field_category)%>:</th><td class="category"><%=h(@issue.category ? @issue.category.name : "-") %></td>
+    <th class="progress"><%=l(:field_done_ratio)%>:</th><td class="progress"><%= progress_bar @issue.done_ratio, :width => '80px', :legend => "#{@issue.done_ratio}%" %></td>
+</tr>
+<tr>
+    <th class="fixed-version"><%=l(:field_fixed_version)%>:</th><td class="fixed-version"><%= @issue.fixed_version ? link_to_version(@issue.fixed_version) : "-" %></td>
     <% if User.current.allowed_to?(:view_time_entries, @project) %>
     <th class="spent-time"><%=l(:label_spent_time)%>:</th>
     <td class="spent-time"><%= @issue.spent_hours > 0 ? (link_to l_hours(@issue.spent_hours), {:controller => 'timelog', :action => 'index', :project_id => @project, :issue_id => @issue}) : "-" %></td>
     <% end %>
 </tr>
 <tr>
-    <th class="fixed-version"><%=l(:field_fixed_version)%>:</th><td class="fixed-version"><%= @issue.fixed_version ? link_to_version(@issue.fixed_version) : "-" %></td>
+    <th class="chklabel"><%= check_box_tag('w', 'w', @issue.se_visible_web, :disabled => true) %><%=l(:label_se_visible_web)%></th>
+    <th class="chklabel"><%= check_box_tag('q', 'q', @issue.se_visible_data, :disabled => true)  %><%=l(:label_se_visible_data)%></th>
+    <th class="chklabel"><%= check_box_tag('s', 's', @issue.se_visible_newsletter, :disabled => true)  %><%=l(:label_se_visible_newsletter)%></th>
+    <th class="chklabel"><%= check_box_tag('x', 'x', @issue.se_protetto, :disabled => true)  %><%=l(:label_se_protetto)%></th>
+</tr>
+<tr>
+    <th class=""></th><td class=""></td>
     <% if @issue.estimated_hours %>
     <th class="estimated-hours"><%=l(:field_estimated_hours)%>:</th><td class="estimated-hours"><%= l_hours(@issue.estimated_hours) %></td>
     <% end %>
 </tr>
+
 <%= render_custom_fields_rows(@issue) %>
 <%= call_hook(:view_issues_show_details_bottom, :issue => @issue) %>
 </table>
+
+<% if @issue.riassunto? -%>
+<hr />
+
+  <p><strong><%=l(:field_riassunto)%></strong></p>
+  <div class="wiki">
+  <%= textilizable @issue, :riassunto, :attachments => @issue.attachments %>
+  </div>
+<% end %>
 
 <% if @issue.description? || @issue.attachments.any? -%>
 <hr />
