--- a/app/views/type_organizations/new.html.erb
+++ b/app/views/type_organizations/new.html.erb
@@ -1,23 +1,9 @@
-<h1>New type_organization</h1>
+<h2><%= link_to l(:label_type_organization_plural), type_organizations_path %> &#187; <%= l(:label_type_organization_new) %></h2>
 
-<% form_for(@type_organization) do |f| %>
-  <%= f.error_messages %>
-
-  <p>
-    <%= f.label :tipo %><br />
-    <%= f.text_field :tipo %>
-  </p>
-  <p>
-    <%= f.label :descrizione %><br />
-    <%= f.text_field :descrizione %>
-  </p>
-  <p>
-    <%= f.label :priorita %><br />
-    <%= f.text_field :priorita %>
-  </p>
-  <p>
-    <%= f.submit 'Create' %>
-  </p>
+<% labelled_form_for @type_organization do |f| %>
+<%= render :partial => 'form', :locals => { :f => f } %>
+<p>
+  <%= f.submit l(:button_create) %>
+  <%= f.submit l(:button_create_and_continue), :name => 'continue' %>
+</p>
 <% end %>
-
-<%= link_to 'Back', type_organizations_path %>
