--- a/app/views/assos/show.html.erb
+++ b/app/views/assos/show.html.erb
@@ -9,76 +9,72 @@
 <h2><%= link_to l(:label_asso_plural), assos_path %> &#187; <%=h @asso %></h2>
 
 <div class="splitcontentleft">
-
-<fieldset class="box tabular">
-  <legend><%=l(:label_asso_full)%></legend>
-
-        <p>
-        <% unless @asso.ragione_sociale.blank? %>
-            <em><%=h @asso.ragione_sociale %></em>
-            <br />
-        <% end %>
-        </p>
-        <p>
-            <%= l(:label_indirizzo) %>: <%=h @asso.indirizzo %>
-        </p>
-
-        <p>
-            <%= l(:label_email) %>: <%=h @asso.email %>
-        </p>
-
-        <p>
-            <%= l(:label_presidente) %>: <%=h @asso.presidente %>
-        </p>
-
-        <p>
-            <%= l(:label_referente) %>: <%=h @asso.referente %>
-        </p>
-
-        <p>
-            <%= l(:label_consulente) %>: <%=h @asso.consulente %>
-        </p>
-
-        <p>
-            <%= l(:label_logo) %>: <%=h @asso.logo %>
-        </p>
-
-        <p>
-            <%= l(:label_telefono) %>: <%=h @asso.telefono %>
-        </p>
-
-        <p>
-            <%= l(:label_telefono_alt) %>: <%=h @asso.telefono_alt %>
-        </p>
-
-        <p>
-            <%= l(:label_fax) %>: <%=h @asso.fax %>
-        </p>
-
-        <p>
-            <%= l(:label_comunicazioni) %>: <%=h @asso.comunicazioni %>
-        </p>
-
-        <p>
-            <%= l(:label_email_alt) %>: <%=h @asso.email_alt %>
-        </p>
-</fieldset>
+  <fieldset class="box tabular">
+    <legend><%=l(:label_asso_full)%></legend>
+    <p>
+    <% unless @asso.ragione_sociale.blank? %>
+        <em><%=h @asso.ragione_sociale %></em>
+        <br />
+    <% end %>
+    </p>
+    <p>
+        <%= l(:label_indirizzo) %>: <%=h @asso.indirizzo %>
+    </p>
+    <p>
+        <%= l(:label_email) %>: <%=h @asso.email %>
+    </p>
+    <p>
+        <%= l(:label_presidente) %>: <%=h @asso.presidente %>
+    </p>
+    <p>
+        <%= l(:label_referente) %>: <%=h @asso.referente %>
+    </p>
+    <p>
+        <%= l(:label_consulente) %>: <%=h @asso.consulente %>
+    </p>
+    <p>
+        <%= l(:label_logo) %>: <%=h @asso.logo %>
+    </p>
+    <p>
+        <%= l(:label_telefono) %>: <%=h @asso.telefono %>
+    </p>
+    <p>
+        <%= l(:label_telefono_alt) %>: <%=h @asso.telefono_alt %>
+    </p>
+    <p>
+        <%= l(:label_fax) %>: <%=h @asso.fax %>
+    </p>
+    <p>
+      <%= l(:label_comunicazioni) %>: 
+      <div class="wiki">
+        <%= textilizable(@group_banner.comunicazioni) %>
+      </div>
+    </p>
+    <p>
+        <%= l(:label_email_alt) %>: <%=h @asso.email_alt %>
+    </p>
+  </fieldset>
 </div>
 
 <div class="splitcontentright">
     <fieldset class="box tabular">
       <legend><%=l(:label_asso_associated_group_banner)%></legend>
+        <% if @asso.group_banners.any? %>
         <table>
           <tr>
-            <th>l(:label_group_banner)</th>
+            <th><%=l(:label_group_banner)%></th>
           </tr>
           <% @asso.group_banners.each do |related_banner| %>
-              <tr>
-                <td class="buttons">
-                    <%= link_to(h(related_banner.espositore), group_banner_path(related_banner), :class => 'icon icon-summary')  if User.current.admin?   %>
-              </tr>
+            <tr>
+              <td class="buttons">
+                <%= link_to(h(related_banner.espositore), group_banner_path(related_banner), :class => 'icon icon-summary') if User.current.admin?   %>
+                <%= h(related_banner.espositore) if !User.current.admin?   %>
+            </tr>
           <% end %>
         </table>
+        <% else %>
+          <%=l(:label_asso_associated_group_banner_noone)%>
+        <% end %>
     </fieldset>
 </div>
 
