--- a/app/views/invoices/new.html.erb
+++ b/app/views/invoices/new.html.erb
@@ -1,47 +1,9 @@
-<h1>New invoice</h1>
+<h2><%= link_to l(:label_invoice_plural), invoices_path %> &#187; <%= l(:label_invoice_new) %></h2>
 
-<% form_for(@invoice) do |f| %>
-  <%= f.error_messages %>
-
-  <p>
-    <%= f.label :user_id %><br />
-    <%= f.text_field :user_id %>
-  </p>
-  <p>
-    <%= f.label :numero_fattura %><br />
-    <%= f.text_field :numero_fattura %>
-  </p>
-  <p>
-    <%= f.label :data_fattura %><br />
-    <%= f.datetime_select :data_fattura %>
-  </p>
-  <p>
-    <%= f.label :sezione %><br />
-    <%= f.text_field :sezione %>
-  </p>
-  <p>
-    <%= f.label :anno %><br />
-    <%= f.text_field :anno %>
-  </p>
-  <p>
-    <%= f.label :tariffa %><br />
-    <%= f.text_field :tariffa %>
-  </p>
-  <p>
-    <%= f.label :sconto %><br />
-    <%= f.text_area :sconto %>
-  </p>
-  <p>
-    <%= f.label :iva %><br />
-    <%= f.text_area :iva %>
-  </p>
-  <p>
-    <%= f.label :pagamento %><br />
-    <%= f.text_field :pagamento %>
-  </p>
-  <p>
-    <%= f.submit 'Create' %>
-  </p>
+<% labelled_form_for @invoice do |f| %>
+<%= render :partial => 'form', :locals => { :f => f } %>
+<p>
+  <%= f.submit l(:button_create) %>
+  <%= f.submit l(:button_create_and_continue), :name => 'continue' %>
+</p>
 <% end %>
-
-<%= link_to 'Back', invoices_path %>
