--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -9,79 +9,71 @@
 <h2><%= link_to l(:label_invoice_plural), invoices_path %> &#187; <%=h @invoice %></h2>
 
 <div class="splitcontentleft">
-
-<fieldset class="box tabular">
-  <legend><%=l(:label_invoice)%></legend>
-
-        <p>
-        <% unless @invoice.tipo.blank? %>
-            <em><%=h @invoice.tipo %></em>
-            <br />
-        <% end %>
-        </p>
-        <p>
-            <%= l(:label_user) %>: <%= link_to h(@invoice.user), user_path(@invoice.user, :id => @invoice.user_id) %>
-        </p>
-        
-        <p>
-            <%= l(:label_numero_fattura) %>: <%=h @invoice.numero_fattura %>
-        </p>
-
-        <p>
-            <%= l(:label_data_fattura) %>: <%=h @invoice.data_fattura %>
-        </p>
-
-        <p>
-            <%= l(:label_sezione) %>: <%=h @invoice.sezione %>
-        </p>
-
-        <p>
-            <%= l(:label_anno) %>: <%=h @invoice.anno %>
-        </p>
-
-        <p>
-            <%= l(:label_tariffa) %>: <%=h @invoice.tariffa %>
-        </p>
-
-        <p>
-            <%= l(:label_sconto) %>: <%=h @invoice.sconto %>
-        </p>
-
-        <p>
-            <%= l(:label_iva) %>: <%=h @invoice.iva %>
-        </p>
-
-        <p>
-            <%= l(:label_pagamento) %>: <%=h @invoice.pagamento %>
-        </p>
-</fieldset>
+  <fieldset class="box tabular">
+    <legend><%=l(:label_invoice)%></legend>
+    <p>
+    <% unless @invoice.numero_fattura.blank? %>
+        <em><%=h @invoice.numero_fattura %></em>
+        <br />
+    <% end %>
+    </p>
+    <p>
+        <%= l(:label_user) %>: <%= link_to h(@invoice.user), user_path(@invoice.user, :id => @invoice.user_id) %>
+    </p>
+    <p>
+        <%= l(:label_data_fattura) %>: <%= format_date(@invoice.data_fattura) %>
+    </p>
+    <p>
+        <%= l(:label_sezione) %>: <%=h @invoice.sezione %>
+    </p>
+    <p>
+        <%= l(:label_anno) %>: <%=h @invoice.anno %>
+    </p>
+    <p>
+        <%= l(:label_tariffa) %>: <%=h @invoice.tariffa %>
+    </p>
+    <p>
+      <%= l(:label_sconto) %>: 
+      <div class="wiki">
+        <%= textilizable(@invoice.sconto) %>
+      </div>
+    </p>
+    <p>
+        <%= l(:label_iva) %>: <%=h @invoice.iva %>
+    </p>
+    <p>
+        <%= l(:label_pagamento) %>: <%=h @invoice.pagamento %>
+    </p>
+  </fieldset>
 </div>
 
 <div class="splitcontentright">
-    <fieldset class="box tabular">
-      <legend><%=l(:label_user_invoices)%></legend>
-        <table>
-          <tr>
-            <th>num</th>
-            <th>data</th>
-            <th>anno</th>
-            <th>tariffa</th>
-            <th>pagamento</th>
-          </tr>
-          <% @invoice.user.invoices.each do |user_invoice| 
-                if (user_invoice != @invoice) %>
-                  <tr>
-                    <td class="buttons">
-                        <%= link_to h(user_invoice.numero_fattura), invoice_path(user_invoice), :class => 'icon icon-summary')  if User.current.admin?   %>
-                    </td>
-                    <td><%=h user_invoice.data_fattura %></td>
-                    <td><%=h user_invoice.anno %></td>
-                    <td><%=h user_invoice.tariffa %></td>
-                    <td><%=h user_invoice.pagamento %></td>
-                  </tr>
-                <% end
-          end %>
-        </table>
-    </fieldset>
+  <fieldset class="box tabular">
+    <legend><%=l(:label_user_invoices)%></legend>
+    <table>
+      <tr>
+        <th>num</th>
+        <th>data</th>
+        <th>anno</th>
+        <th>tariffa</th>
+        <th>pagamento</th>
+      </tr>
+      <% @invoice.user.invoices.each do |user_invoice| %>
+        <tr>
+          <% if (user_invoice != @invoice) %>
+            <td class="buttons">
+              <%= link_to(h(user_invoice.numero_fattura), invoice_path(user_invoice, :id => user_invoice.id), :class => 'icon icon-summary') if User.current.admin?   %>
+          <% else %>
+          <td><b><%=h user_invoice.numero_fattura %></b></td>
+          <% end %>
+          </td>
+          <td><%= format_date(user_invoice.data_fattura) %></td>
+          <td><%=h user_invoice.anno %></td>
+          <td><%=h user_invoice.tariffa %></td>
+          <td><%=h user_invoice.pagamento %></td>
+        </tr>
+      <% end %>
+    </table>
+  </fieldset>
 </div>
 
