--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -9,25 +9,22 @@
 <h2><%= link_to l(:label_section_plural), sections_path %> &#187; <%=h @section %></h2>
 
 <div class="splitcontentleft">
-
-<fieldset class="box tabular">
-  <legend><%=l(:label_section)%></legend>
-
-        <p>
-        <% unless @section.sezione.blank? %>
-            <em><%=h @section.sezione %></em>
-            <br />
-        <% end %>
-        </p>
-        <p>
-            <%=h @section.top_section %>
-        </p>
-        <p>
-            <%= l(:label_ordinamento) %>: <%=h @section.ordinamento %>
-        </p>
-        <p>
-            <%= check_box_tag l(:label_protetto), 1, @section.protetto, :disabled => 'disabled'  %> <%= l(:label_protetto) %>  
-
-        </p>
-</fieldset>
+  <fieldset class="box tabular">
+    <legend><%=l(:label_section)%></legend>
+    <p>
+    <% unless @section.sezione.blank? %>
+        <em><%=h @section.sezione %></em>
+        <br />
+    <% end %>
+    </p>
+    <p>
+        <%= l(:label_top_section) %>: <%= link_to h(@section.top_section), top_section_path(@section.top_section, :id => @section.top_section_id) %>
+    </p>
+    <p>
+        <%= l(:label_ordinamento) %>: <%=h @section.ordinamento %>
+    </p>
+    <p>
+        <%= check_box_tag l(:label_protetto), 1, @section.protetto, :disabled => 'disabled'  %> <%= l(:label_protetto) %>  
+    </p>
+  </fieldset>
 </div>
