--- a/app/views/type_organizations/index.html.erb
+++ b/app/views/type_organizations/index.html.erb
@@ -1,24 +1,31 @@
-<h1>Listing type_organizations</h1>
+<div class="contextual">
+<%= link_to l(:label_type_organization_new), new_type_organization_path, :class => 'icon icon-add' %>
+</div>
 
-<table>
-  <tr>
-    <th>tipo</th>
-    <th>descrizione</th>
-    <th>priorita</th>
-  </tr>
+<h2><%= l(:label_type_organization_plural) %></h2>
 
+<% if @type_organizations.any? %>
+<table class="list type_organizations">
+  <thead><tr>
+  <%= sort_header_tag('tipo', :title => l(:label_tipo), :style => 'width: 70%;text-align:left;')%>
+  <%= sort_header_tag('priorita', :title => l(:label_priorita), :style => 'width: 20%;text-align:left;')%>
+  <th style='width: 5%;'></th>
+  <th style='width: 5%;'></th>
+  </tr></thead>
+  <tbody>
 <% @type_organizations.each do |type_organization| %>
-  <tr>
-    <td><%=h type_organization.tipo %></td>
-    <td><%=h type_organization.descrizione %></td>
-    <td><%=h type_organization.priorita %></td>
-    <td><%= link_to 'Show', type_organization %></td>
-    <td><%= link_to 'Edit', edit_type_organization_path(type_organization) %></td>
-    <td><%= link_to 'Destroy', type_organization, :confirm => 'Are you sure?', :method => :delete %></td>
+  <tr class="<%= cycle 'odd', 'even' %>">
+    <td><%= link_to h(type_organization.tipo), type_organization_path(type_organization) %></td>
+    <td align="right"><%=h type_organization.priorita %></td>
+    <td class="buttons"><%= link_to('', edit_type_organization_path(type_organization), :class => 'icon icon-edit') if User.current.admin? %></td>
+    <td class="buttons"><%= link_to ('', type_organization, :confirm => l(:text_are_you_sure), :method => :delete, :class => 'icon icon-del') if User.current.admin? %></td>
   </tr>
 <% end %>
 </table>
 
-<br />
+<p class="pagination"><%= pagination_links_full @type_organization_pages, @type_organization_count %></p>
 
-<%= link_to 'New type_organization', new_type_organization_path %>
+<% else %>
+<p class="nodata"><%= l(:label_no_data) %></p>
+<% end %>
+
