--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -937,6 +937,24 @@ padding-bottom: 3px;
 .icon-file.application-zip { background-image: url(../images/files/zip.png); }
 .icon-file.application-x-gzip { background-image: url(../images/files/zip.png); }
 
+/*Dom 20120715*/
+.icon-down  { background-image: url(../images/ico/down.gif); }
+.icon-up  { background-image: url(../images/ico/up.gif); }
+.icon-padlock_open  { background-image: url(../images/ico/Padlock_green.png); }
+.icon-padlock_close  { background-image: url(../images/ico/Padlock_red.png); }
+.icon-email  { background-image: url(../images/ico/email.gif); }
+.icon-banner  { background-image: url(../images/ico/banner.gif); }
+.icon-banner3  { background-image: url(../images/ico/banner.png); }
+.icon-banner4  { background-image: url(../images/ico/banner2.png); }
+.icon-home  { background-image: url(../images/ico/home.gif); }
+.icon-home_yes  { background-image: url(../images/ico/home_yes.gif); }
+.icon-home_no  { background-image: url(../images/ico/home_no.gif); }
+.icon-yes  { background-image: url(../images/ico/si.png); }
+.icon-protected  { background-image: url(../images/ico/protected.gif); }
+.icon-unprotected  { background-image: url(../images/ico/unprotected.gif); }
+.icon-globe  { background-image: url(../images/ico/globe.png); }
+.icon-pic  { background-image: url(../images/ico/pic.png); }
+
 img.gravatar {
     padding: 2px;
     border: solid 1px #d5d5d5;
