--- a/app/views/comunes/edit.html.erb
+++ b/app/views/comunes/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Editing comune</h1>
-
+                TODO verificare e mettere in presentazione REDMINE
 <% form_for(@comune) do |f| %>
   <%= f.error_messages %>
 
